# camera_singlesurface_dual_output

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/qdev/singlesurfacedualquality/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: yuv_copy.cpp
app/src/main/java/com/qdev/singlesurfacedualquality/: MainActivity.kt
app/src/main/java/com/qdev/singlesurfacedualquality/utils/: CircularArrayQueue.kt  InputSurface.java  OutputSurface.java  TextureRender.java  Utlis.kt  YuvUtils.kt
app/src/main/java/com/qdev/singlesurfacedualquality/views/: AutoFitTextureView.java  BaseGestureDetector.java  MoveGestureDetector.java  ResolutionsSpinnerAdapter.kt
app/src/main/res/drawable/: background_ai_red_button.xml  background_rectangle_green_with_tick.xml
app/src/main/res/layout/: activity_main.xml  resolution_spinneritem.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qdev/singlesurfacedualquality/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
